Сброс статистики в профиле, ссылка на демо-стенд в README
